--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,7 +2,7 @@
 
 .App {
   text-align: center;
-  font-family: 'Press Start 2P !important', cursive;
+  font-family: 'Press Start 2P', cursive;
 }
 
 .App-logo {
