--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,7 @@
 
 body {
   margin: 0;
-
+  font-family: 'Press Start 2P', cursive;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: black;
